[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/upgrade_slot.gd" id="1"]

[node name="UpgradeSlot" type="Control"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18, 0.15, 0.22, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "â¬†"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Upgrade Name"

[node name="DescLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Description text here"
autowrap_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="HBoxContainer/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0/5"
horizontal_alignment = 2

[node name="CostLabel" type="Label" parent="HBoxContainer/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "100g"
horizontal_alignment = 2

[node name="UpgradeButton" type="Button" parent="HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 28)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Upgrade"
